--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,26 @@ jobs:
           paths:
             - dist
 
+  deploy-github-pages:
+    <<: *defaults
+
+    steps:
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache: *restore_cache
+      - run: *npm_install
+      - save_cache: *save_cache
+        
+      - run:
+          name: Deploy GitHub Pages
+          command: |
+            git config --global user.email "$GIT_AUTHOR_EMAIL"
+            git config --global user.name "$GIT_AUTHOR_NAME"
+            npx npm-install-peers
+            npm run storybook-build
+            npm run storybook-deploy
+
 # Workflows enable multiple jobs in parallel
 workflows:
   version: 2
@@ -69,3 +89,7 @@ workflows:
   deploy:
     jobs:
       - build
+
+      - deploy-github-pages:
+          requires:
+            - build
