--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "npm": "^5.0.0"
   },
   "scripts": {
-    "install-dependencies": "if [ ! -d node_modules ]; then npm install && npm-install-peers; fi",
+    "install-dependencies":
+      "if [ ! -d node_modules ]; then npm install && npm-install-peers; fi",
     "prebuild": "npm run install-dependencies",
     "build": "rollup -c scripts/rollup.config.js",
     "prestorybook": "npm run install-dependencies",
     "storybook": "start-storybook -p 6006",
-    "storybook-build": "build-storybook"
+    "storybook-build": "build-storybook",
+    "storybook-deploy":
+      "gh-pages -d storybook-static -m 'Update GitHub Pages [ci skip]'"
   },
   "repository": {
     "type": "git",
@@ -37,6 +40,7 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-runtime": "^6.26.0",
     "bootstrap-italia": "git+https://github.com/italia/bootstrap-italia.git",
+    "gh-pages": "^1.1.0",
     "npm-install-peers": "^1.2.1",
     "reactstrap": "^5.0.0",
     "rollup": "^0.58.0",
