--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "bootstrap-italia": "git+https://github.com/italia/bootstrap-italia.git",
     "eslint": "^4.19.1",
@@ -47,6 +51,7 @@
     "gh-pages": "^1.1.0",
     "npm-install-peers": "^1.2.1",
     "prettier": "^1.12.1",
+    "react-select": "^2.0.0-alpha.11",
     "reactstrap": "^5.0.0",
     "rollup": "^0.58.0",
     "rollup-plugin-babel": "^3.0.3",
