Add Storybook State addon, Popover stories

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.0.0"
   },
   "devDependencies": {
+    "@sambego/storybook-state": "^1.0.7",
     "@storybook/addon-knobs": "^3.4.1",
     "@storybook/addon-options": "^3.4.1",
     "@storybook/addon-viewport": "4.0.0-alpha.1",
