--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
     "npm": "^5.0.0"
   },
   "scripts": {
-    "install-dependencies":
-      "if [ ! -d node_modules ]; then npm install && npm-install-peers; fi",
+    "install-dependencies": "if [ ! -d node_modules ]; then npm install && npm-install-peers; fi",
     "prebuild": "npm run install-dependencies",
     "build": "rollup -c scripts/rollup.config.js",
     "prestorybook": "npm run install-dependencies",
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook",
-    "storybook:deploy":
-      "gh-pages -d storybook-static -m 'Update GitHub Pages [ci skip]'",
+    "storybook:deploy": "gh-pages -d storybook-static -m 'Update GitHub Pages [ci skip]'",
     "test": "CI=true react-scripts test --env=jsdom"
   },
   "repository": {
@@ -49,7 +47,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "bootstrap-italia": "git+https://github.com/italia/bootstrap-italia.git",
+    "bootstrap-italia": "^0.7.1",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-babel": "^5.0.0",
