--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "npm": "^5.0.0"
   },
   "scripts": {
-    "install-dependencies": "if [ ! -d node_modules ]; then npm install && npm-install-peers; fi",
+    "install-dependencies": "if [ ! -d node_modules ]; then npm install && npx npm-install-peers; fi",
     "prebuild": "npm run install-dependencies",
     "build": "rollup -c scripts/rollup.config.js",
     "prestorybook": "npm run install-dependencies",
@@ -55,7 +55,6 @@
     "eslint-plugin-react": "^7.7.0",
     "gh-pages": "^1.1.0",
     "jest": "^22.4.3",
-    "npm-install-peers": "^1.2.1",
     "prettier": "^1.12.1",
     "react-scripts": "^1.1.4",
     "react-select": "^2.0.0-alpha.11",
